--- a/Ravlyk/Ravlyk.Droid/Properties/AndroidManifest.xml
+++ b/Ravlyk/Ravlyk.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0" package="com.dev.a">
 	<uses-sdk android:minSdkVersion="19" />
 	<application android:label="Ravlyk" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme"></application>
 </manifest>
