--- a/Ravlyk/Ravlyk/packages.config
+++ b/Ravlyk/Ravlyk/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="portable45-net45+win8" />
+  <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="portable45-net45+win8" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
