--- a/Ravlyk/Ravlyk/packages.config
+++ b/Ravlyk/Ravlyk/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.UserDialogs" version="6.2.3" targetFramework="portable45-net45+win8" />
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="portable45-net45+win8" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="portable45-net45+win8" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
