--- a/Ravlyk/Ravlyk.Droid/packages.config
+++ b/Ravlyk/Ravlyk.Droid/packages.config
@@ -3,6 +3,10 @@
   <package id="Caliburn.Micro" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="monoandroid60" />
+  <package id="sqlite-net-pcl" version="1.1.2" targetFramework="monoandroid60" />
+  <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="monoandroid60" />
+  <package id="SQLitePCL.plugin.sqlite3.android" version="0.9.2" targetFramework="monoandroid60" />
+  <package id="SQLitePCL.raw" version="0.9.2" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
