--- a/Ravlyk/Ravlyk/packages.config
+++ b/Ravlyk/Ravlyk/packages.config
@@ -5,6 +5,9 @@
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="portable45-net45+win8" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8" />
+  <package id="sqlite-net-pcl" version="1.1.2" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="portable45-net45+win8" />
+  <package id="SQLitePCL.raw" version="0.9.2" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
