--- a/Ravlyk/Ravlyk.Droid/Properties/AndroidManifest.xml
+++ b/Ravlyk/Ravlyk.Droid/Properties/AndroidManifest.xml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionCode="1" android:versionName="1.0" package="com.dev.a">
-	<uses-sdk android:minSdkVersion="16" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" android:versionName="2.0" package="com.dev.a" android:versionCode="2">
+	<uses-sdk android:minSdkVersion="19" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<application android:label="Ravlyk" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme"></application>
-  
 </manifest>
