--- a/Ravlyk/Ravlyk/packages.config
+++ b/Ravlyk/Ravlyk/packages.config
@@ -4,6 +4,7 @@
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="portable45-net45+win8" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="portable45-net45+win8" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8" />
   <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8" />
   <package id="sqlite-net-pcl" version="1.1.2" targetFramework="portable45-net45+win8" />
   <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="portable45-net45+win8" />
