--- a/Ravlyk/Ravlyk.Droid/packages.config
+++ b/Ravlyk/Ravlyk.Droid/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="2.1.0" targetFramework="monoandroid60" />
+  <package id="Acr.UserDialogs" version="6.2.3" targetFramework="monoandroid60" />
+  <package id="AndHUD" version="1.2.0" targetFramework="monoandroid60" />
   <package id="Caliburn.Micro" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="monoandroid60" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="monoandroid60" />
+  <package id="Splat" version="1.6.2" targetFramework="monoandroid60" />
   <package id="sqlite-net-pcl" version="1.1.2" targetFramework="monoandroid60" />
   <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="monoandroid60" />
   <package id="SQLitePCL.plugin.sqlite3.android" version="0.9.2" targetFramework="monoandroid60" />
