--- a/Ravlyk/Ravlyk.iOS/packages.config
+++ b/Ravlyk/Ravlyk.iOS/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Caliburn.Micro" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Caliburn.Micro.Core" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.1" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="sqlite-net-pcl" version="1.1.2" targetFramework="xamarinios10" />
   <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="xamarinios10" />
   <package id="SQLitePCL.raw" version="0.9.2" targetFramework="xamarinios10" />
