--- a/Ravlyk/Ravlyk/packages.config
+++ b/Ravlyk/Ravlyk/packages.config
@@ -12,5 +12,5 @@
   <package id="Toasts.Forms.Plugin" version="2.0.4" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugin.Connectivity" version="2.2.2" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="portable45-net45+win8" />
-  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8" />
 </packages>
